main.css
/* ... */
pre > code {
  display: block;
  padding: 1rem 1.5rem;
  white-space: pre; }


/* Tables
–––––––––––––––––––––––––––––––––––––––––––––––––– */
th,
td {
  padding: 12px 15px;
  text-align: left;
  border-bottom: 1px solid #E1E1E1; }
th:first-child,
td:first-child {
  padding-left: 0; }
th:last-child,
td:last-child {
  padding-right: 0; }


/* Spacing
–––––––––––––––––––––––––––––––––––––––––––––––––– */
button,
.button {
  margin-bottom: 1rem; }
input,
textarea,
select,
fieldset {
  margin-bottom: 1.5rem; }
pre,
blockquote,
dl,
figure,
table,
p,
ul,
ol,
form {
  margin-bottom: 2.5rem; }
nav {
  margin-bottom: 5rem; }
hr {
  margin-top: 3rem;
  margin-bottom: 2.5rem;
  border-width: 0;
  border-top: 1px solid #333; }


/* Utilities
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.u-full-width {
  width: 100%;
  box-sizing: border-box; }
.u-max-full-width {
  max-width: 100%;
  box-sizing: border-box; }
.u-pull-right {
  float: right; }
.u-pull-left {
  float: left; }


/* Icons
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.icon-footer {
  font-size: 2.7rem;
  color: #666;
  padding-left: 0.3rem;
  padding-right: 0.3rem; }

.icon-footer:hover,
.icon-footer:active {
  color: #FFF; }


/* Footer
–––––––––––––––––––––––––––––––––––––––––––––––––– */

#footer {
  text-align: center; }

#copyright {
  font-size: 12px;
  font-family: arial, sans-serif;
  color: #666;
  padding-top: 1rem;
  padding-bottom: 3rem; }


/* Clearing
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* Self Clearing Goodness */
.container:after,
.row:after,
.u-cf {
  content: "";
  display: table;
  clear: both; }


/* Media Queries
–––––––––––––––––––––––––––––––––––––––––––––––––– */
/*
Note: The best way to structure the use of media queries is to create the queries
near the relevant code. For example, if you wanted to change the styles for buttons
on small devices, paste the mobile query code up in the buttons section and style it
there.
*/


/* Larger than mobile */
@media (min-width: 400px) {}

/* Larger than phablet (also point when grid becomes active) */
@media (min-width: 550px) {}

/* Larger than tablet */
@media (min-width: 750px) {}

/* Larger than desktop */
@media (min-width: 1000px) {}

/* Larger than Desktop HD */
@media (min-width: 1200px) {}


/* Navigation
–––––––––––––––––––––––––––––––––––––––––––––––––– */

nav {
  height: 40px;
  width: 100%;
  background-color: rgba(0,0,0,0.3);
  position: relative; }

nav ul {
  padding: 0;
  margin: 0 auto;
  width: 550px;
  height: 40px; }

nav li {
  display: inline;
  float: left; }

.clearfix:before,
.clearfix:after {
  content: " ";
  display: table; }
.clearfix:after {
  clear: both; }
.clearfix {
  *zoom: 1; }

nav a {
  color: #CFCFCF;
  display: inline-block;
  width: 110px;
  text-align: center;
  text-decoration: none;
  line-height: 40px; }

nav li a {
  border-right: 1px solid #333;
  box-sizing:border-box;
  -moz-box-sizing:border-box;
  -webkit-box-sizing:border-box; }

nav li:last-child a {
  border-right: 0; }

nav a:hover, nav a:active, .nav-current {
  background-color: #E9BF5D;
  color: #333; }

nav a#logo, nav a#pull {
  display: none; }

nav a#logo:hover, nav a#logo:active, nav a#pull:hover, nav a#pull:active {
  background-color: transparent;
  color: #FFF; }

@media screen and (max-width: 550px) {
  nav {
    height: 40px; }
  nav ul {
    width: 100%;
    display: block;
    height: auto; }
  nav li {
    width: 20%;
    float: left;
    position: relative; }
  nav li a {
    border-right: 1px solid #333; }
  nav a {
    text-align: center;
    width: 100%; }
}

@media only screen and (max-width: 400px) {
  h1 {
    display: none; }
  nav {
    height: auto;
    border-bottom: 1px solid #333; }
  nav ul {
    display: none;
    height: auto; }
  nav li {
    height: auto;
    border-bottom: 1px solid #333; }
  nav a#logo {
    display: block;
    height: auto;
    width: 90%;
    position: relative;
    font-family: "Crimson Text", Times, serif;
    font-size: 2rem;
    text-align: left;
    text-indent: 25px; }
  nav a#pull {
    display: block;
    height: auto;
    width: 100%;
    position: relative;
    cursor: pointer; }
  nav a#pull:after {
    font-family: fa;
    font-size: 30px;
    content:"\e810";
    display: inline-block;
    position: absolute;
    right: 10px;
    top: -40px; }
}

@media only screen and (max-width: 350px) {
  nav li {
    display: block;
    float: none;
    width: 100%; }
}


/* Font Awesome
   ========================================================================== */
@font-face {
  font-family: 'fa';
  src: url('fonts/fa.eot?98374205');
  src: url('fonts/fa.eot?98374205#iefix') format('embedded-opentype'),
       url('fonts/fa.woff?98374205') format('woff'),
       url('fonts/fa.ttf?98374205') format('truetype'),
       url('fonts/fa.svg?98374205#fa') format('svg');
  font-weight: normal;
  font-style: normal;
}
/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
/*
@media screen and (-webkit-min-device-pixel-ratio:0) {
  @font-face {
    font-family: 'fa';
    src: url('fonts/fa.svg?98374205#fa') format('svg');
  }
}
*/
 
 [class^="icon-"]:before, [class*=" icon-"]:before {
  font-family: "fa";
  font-style: normal;
  font-weight: normal;
  speak: none;
 
  display: inline-block;
  text-decoration: inherit;
  width: 1em;
  margin-right: .2em;
  text-align: center;
  /* opacity: .8; */
 
  /* For safety - reset parent styles, that can break glyph codes*/
  font-variant: normal;
  text-transform: none;
 
  /* Font smoothing. That was taken from TWBS */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
 
  /* Uncomment for 3D effect */
  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
}
 
.icon-facebook:before { content: '\e800'; } /* '' */
.icon-twitter:before { content: '\e801'; } /* '' */
/* ... */

